css/style.css
/**********BOX-MODEL, CLEARFIX, CLEAR***********/
/* Box Model Hack */
* {
    box-sizing: border-box;
  }
  
  /* Clear fix hack */
  .clearfix:after {
       content: ".";
       display: block;
       clear: both;
       visibility: hidden;
       line-height: 0;
       height: 0;
  }
  /* Clear */
  .clear {
      clear: both;
  }
  

/*************FONTS*****************/
:root {
    --roboto: "Roboto", sans-serif;
    --space-mono: "Space Mono", monospace;
    --10px: 0.625rem;
    --12px: 0.75rem;
    --14px: 0.875rem;
    --16px: 1rem;
    --18px: 1.125rem;
    --20px: 1.25rem;
    --22px: 1.375rem;
    --24px: 1.5rem;
    --30px: 1.875rem;
    --40px: 2.5rem;
    --80px: 5rem;
}

/************REPEATED STYLES****************/
.bold {
    font-weight: bold;
}


/*? COLOR-CONTAINER*/
.color-container {
    background: rgb(238,174,202);
    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(248,176,22,1) 100%);
    border-radius: 25px 25px 0 0;     
}

/*****HEADER*****/
header {
    font: var(--14px) var(--space-mono); 
    overflow: hidden;
    position: relative;
    margin: 0;
    padding: 5px 20px 0 20px;
}

header nav {
    display: none;
}

/*Style the navigation menu*/
header li {
    list-style-type: none;
    text-align: right;
}

header a {
    margin-top: var(--22px);
    color: white;
    padding: 0 var(--16px);
    text-decoration: none;
    font-size: var(--30px);
    display: block;
  }

  /* Style the hamburger menu */
header a.icon {
    display: block;
    position: absolute;
    right: 0;
    top: 0;
  }

  /* Add a grey background color on mouse-over */
header a:hover {
    color: wheat;
    cursor: pointer;
  }
  
  /* Style the active link (or home/logo) */
  .active {
    color: white;
  }

@media (min-width:800px) {

    /*Properties for larger screens*/
    header .logo {
        float: left;
        width: 33.333%;
    }

    header nav {
        width: 66.66%;
        float: left;
        margin-top: 20px;
        display: block;
    }

    header li {
        display: inline;
        font-size: var(--14px);
    }

    header a.icon {
        display: none;
      }

      header a {
        display: inline;
        font-size: var(--20px)
      }
}

/*********TODO: CODE FROM MOBILE-FIRST PERSPECTIVE, DO ONE SECTION AT A TIME. *********/



/*****HOME*****/
.home {
    padding: 3.125rem;
    height: 100vh;
}

.home-content {
    padding-top: 6.25rem;
    font: var(--40px) var(--space-mono);
    text-align: center;
    color: rgba(246, 235, 242, 0.817);
}

#typewriter{
    display: inline-block;
    overflow: wrap;
    border-right: 0.15em solid rgba(246, 235, 242, 0.817);
    white-space: initial;
    margin: 0;
    animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
}

@keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 100;
    }
}

@keyframes blink-caret {
    from, to {
        border-color: transparent;
    }
    50% {
        border-color: rgba(246, 235, 242, 0.817);
    }
}

@media (min-width:800px) {

    /*Properties for larger screens*/
    .home-content{
        padding-top: 40px;
        font-size: 80px;
    }
}
    
/*****ABOUT US*****/
.about-us {
    background-color: seashell;
    border-radius: 0 0 25px 25px;
    text-align: center;
    font-family: var(--space-mono);
}

/* WHO ARE WE? [...] */
.about-us-desc-1 {
    height: 100vh;
    margin: auto;
    width: 75%;
    padding: 10px 10px 0px 10px;
}

.about-us-desc-1 h2 {
    font: bold var(--40px) var(--space-mono);
    text-transform: uppercase;
    color: #f8b016;
}

.about-us-desc-1 .about-us-1 {
    font:  bold var(--30px) var(--space-mono);
    line-height: 45px;
    color: rgb(244, 193, 99);
    padding-bottom: 2rem;
}

.about-us-desc-1 p + p {
    font-family: var(--space-mono);
    padding-bottom: 40px;
    border-bottom: 3px dotted rgba(254, 149, 28, 0.342);
}

.about-us .emoji {
    font-size: 80px;
}

/* SMALL PARAGRAPH DESCRIPTIONS UNDERNEATH DOTTED LINE */
.about-us-2, .about-us-3 {
    font-size: var(--16px);
}

.about-us-4, .about-us-5 {
    font-size: var(--24px);
}

.about-us-4 a {
    border: 2px solid black;
    padding: 10px 15px;
    border-radius: 10px;
    color:white;
    background: burlywood;
}

.about-us-4 a:hover {
    background: rgba(241, 27, 27, 0.13);
}

.about-us-5 {
   font-weight: bold;
}

.about-us img {
    width: 100%;
}

